--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 section {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 50%;
   background-color: green;
   border: 2px solid black;
 }
