--- a/style.css
+++ b/style.css
@@ -1,6 +1,58 @@
-section {
-  height: 400px;
-  width: 50%;
-  background-color: green;
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 300px;
+  width: 100%;
   border: 2px solid black;
+}
+
+#address {
+  height: 60px;
+  width: 550px;
+  font-size: 2em;
+  font-family: "Indie Flower";
+}
+
+.buttonOne {
+  width: 250px;
+  height: 66px;
+  font-size: 1em;
+  font-family: "Indie Flower";
+}
+
+.buttonTwo {
+  width: 250px;
+  height: 66px;
+  font-size: 1em;
+  font-family: "Indie Flower";
+}
+
+.logoBar {
+  width: 100%;
+  height: 100px;
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+
+div#results {
+  border: 2px solid black;
+  width: 100%;
+  height: 70px;
+  border-top: 0px;
+  font-family: "Indie Flower";
+  text-align: center;
+  padding-top: 25px;
+}
+
+div#resultsTwo {
+  border: 2px solid black;
+  width: 100%;
+  height: 70px;
+  border-top: 0px;
+  font-family: "Indie Flower";
+  text-align: center;
+  padding-top: 25px;
 }
