--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   height: 300px;
   width: 100%;
   border: 2px solid black;
+  background-color: blue;
 }
 
 #address {
@@ -21,6 +22,7 @@
   height: 66px;
   font-size: 1em;
   font-family: "Indie Flower";
+  background-color: #98e698;
 }
 
 .buttonTwo {
@@ -28,31 +30,69 @@
   height: 66px;
   font-size: 1em;
   font-family: "Indie Flower";
+  background-color: #98e698;
 }
 
 .logoBar {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 100px;
   border: 2px solid black;
   border-bottom: 0px;
+  background-color: red;
 }
 
 div#results {
+  display: flex;
+  justify-content: space-around;
   border: 2px solid black;
   width: 100%;
-  height: 70px;
+  height: 100px;
   border-top: 0px;
   font-family: "Indie Flower";
+  font-size: 1.5em;
   text-align: center;
   padding-top: 25px;
 }
 
 div#resultsTwo {
+  display: flex;
+  justify-content: space-around;
   border: 2px solid black;
   width: 100%;
-  height: 70px;
+  height: 100px;
   border-top: 0px;
   font-family: "Indie Flower";
   text-align: center;
-  padding-top: 25px;
+  padding-top: 15px;
+  font-size: 1.5em;
+  background-color: red;
+}
+
+h1 {
+  margin-left: 25px;
+}
+
+.alexAvatar {
+  border-radius: 20px;
+  margin-top: 15px;
+  margin-right: 15px;
+  height: 45px;
+}
+
+.mapIcon {
+  border-radius: 50px;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  height: 80px;
+  width: 80px;
+}
+
+.politicianIcon {
+  border-radius: 50px;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  height: 80px;
+  width: 80px;
 }
