--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  height: 300px;
+  height: 250px;
   width: 100%;
   border: 2px solid black;
   background-color: blue;
@@ -51,9 +51,10 @@ div#results {
   height: 100px;
   border-top: 0px;
   font-family: "Indie Flower";
-  font-size: 1.5em;
+  font-size: 2em;
   text-align: center;
   padding-top: 25px;
+  overflow: scroll;
 }
 
 div#resultsTwo {
@@ -66,8 +67,9 @@ div#resultsTwo {
   font-family: "Indie Flower";
   text-align: center;
   padding-top: 15px;
-  font-size: 1.5em;
+  font-size: 2em;
   background-color: red;
+  overflow: scroll;
 }
 
 h1 {
