--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 100px;
+  height: 115px;
   border: 2px solid black;
   border-bottom: 0px;
   background-color: red;
@@ -74,6 +74,8 @@ div#resultsTwo {
 
 h1 {
   margin-left: 25px;
+  font-family: "Indie Flower";
+  font-size: 2em;
 }
 
 .alexAvatar {
