--- a/style.css
+++ b/style.css
@@ -100,3 +100,11 @@ h1 {
   height: 80px;
   width: 80px;
 }
+
+.buttonOne:hover {
+    background-color: red;
+}
+
+.buttonTwo:hover {
+    background-color: red;
+}
