--- a/style.css
+++ b/style.css
@@ -164,11 +164,11 @@ h1 {
 }
 
 .buttonOne:hover {
-    background-color: red;
+    background-color: blue;
 }
 
 .buttonTwo:hover {
-    background-color: red;
+    background-color: blue;
 }
 
 .buttonThree:hover {
